macro/src/snapshots/adze_macro__tests__multiple_extra_types.snap
---
source: macro/src/lib.rs
assertion_line: 999
expression: "rustfmt_code(&expand_grammar(parse_quote!\n{\n    #[adze::grammar(\"test\")] mod grammar\n    {\n        #[adze::language] pub struct Code\n        { #[adze::leaf(pattern = r\"\\w+\")] token: String, } #[adze::extra]\n        struct Whitespace { #[adze::leaf(pattern = r\"\\s\")] _ws: (), }\n        #[adze::extra] struct Comment\n        { #[adze::leaf(pattern = r\"//[^\\n]*\")] _comment: (), }\n    }\n})? .to_token_stream().to_string())"
---
mod grammar {
    pub struct Code {
        token: String,
    }
    impl ::adze::Extract<Code> for Code {
        type LeafFn = ();
        fn extract(
            node: Option<::adze::tree_sitter::Node>,
            source: &[u8],
            last_idx: usize,
            _leaf_fn: Option<&Self::LeafFn>,
        ) -> Self {
            let node = node.expect("Extract called with None node for struct");
            ::adze::__private::extract_struct_or_variant(node, move |cursor, last_idx| Code {
                token: {
                    ::adze::__private::extract_field::<String, _>(
                        cursor, source, last_idx, "token", None,
                    )
                },
            })
        }
    }
    struct Whitespace {
        _ws: (),
    }
    impl ::adze::Extract<Whitespace> for Whitespace {
        type LeafFn = ();
        fn extract(
            node: Option<::adze::tree_sitter::Node>,
            source: &[u8],
            last_idx: usize,
            _leaf_fn: Option<&Self::LeafFn>,
        ) -> Self {
            let node = node.expect("Extract called with None node for struct");
            ::adze::__private::extract_struct_or_variant(node, move |cursor, last_idx| Whitespace {
                _ws: {
                    ::adze::__private::extract_field::<(), _>(cursor, source, last_idx, "_ws", None)
                },
            })
        }
    }
    struct Comment {
        _comment: (),
    }
    impl ::adze::Extract<Comment> for Comment {
        type LeafFn = ();
        fn extract(
            node: Option<::adze::tree_sitter::Node>,
            source: &[u8],
            last_idx: usize,
            _leaf_fn: Option<&Self::LeafFn>,
        ) -> Self {
            let node = node.expect("Extract called with None node for struct");
            ::adze::__private::extract_struct_or_variant(node, move |cursor, last_idx| Comment {
                _comment: {
                    ::adze::__private::extract_field::<(), _>(
                        cursor, source, last_idx, "_comment", None,
                    )
                },
            })
        }
    }
    unsafe extern "C" {
        fn tree_sitter_test() -> ::adze::tree_sitter::Language;
    }
    pub fn language() -> ::adze::tree_sitter::Language {
        unsafe { tree_sitter_test() }
    }
    #[doc = r" Parse an input string according to the grammar. Returns either any parsing errors that happened, or a"]
    #[doc = "[`Code`]"]
    #[doc = r" instance containing the parsed structured data."]
    pub fn parse(input: &str) -> core::result::Result<Code, Vec<::adze::errors::ParseError>> {
        ::adze::__private::parse::<Code>(input, language)
    }
}
